2007-10-04  Ulrich Drepper  <drepper@redhat.com>

	* misc/error.h: Remove support for use outside of libc.  We have to
	include <features.h> now.  Include <bits/error.h> if possible.
	* misc/bits/error.h: New file.

2007-10-03  Jakub Jelinek

	* string/bits/string3.h (memcpy, memmove, mempcpy, memset, bcopy,
	bzero, strcpy, stpcpy, strncpy, strcat, strncat): Use
	__extern_always_inline functions unconditionally, drop macros.

	* misc/sys/cdefs.h (__REDIRECT_LDBL, __REDIRECT_NTH_LDBL): New macros.
	* wcsmbs/bits/wchar2.h (__swprintf_alias, __vswprintf_alias): Use
	__REDIRECT_NTH_LDBL macro rather than __REDIRECT_NTH.

	* misc/sys/cdefs.h (__extern_always_inline): For GCC 4.3+
	add __artificial__ attribute.

2007-10-02  Ulrich Drepper  <drepper@redhat.com>

	* string/strcoll_l.c (STRCOLL): Correct handling of switching from
	backward to forward direction.

	* string/strcoll_l.c (STRCOLL): Correct test for alloca use.

	[BZ #645]
	* locale/programs/ld-collate.c (collate_finish): Compare against last
	used section which is known to have rules defined.
	(collate_read): After order_start, correctly record order of sections
	and queue sections up.

2007-10-01  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5071]
	* malloc/malloc.c (mremap_chunk): Avoid resizing of new block has
	the same number of pages.
	Patch by Tomash Brechko <tomash.brechko@gmail.com>.

	* locale/programs/ld-collate.c (collate_read): After initial copy
	statement, continue in state 0.

	* include/stdio_ext.h (__fsetlocking): Define as macro.

2007-09-30  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (collate_finish): Compare all bytes
	of section order.

	* po/pt_BR.po: Fix typo.

2007-09-29  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile (modules): Add ISO8859-9E.
	(distribute): Add iso8859-9e.c.
	(gen-8bit-gap-modules): Add iso8859-9e.
	* iconvdata/iso8859-9e.c: New file.
	* iconvdata/gconv-modules: Add entries for ISO-8859-9E.
	* iconvdata/TESTS: Likewise.