@@ -1,5 +1,9 @@
 2007-10-04  Ulrich Drepper  <drepper@redhat.com>
 
+	* login/login_tty.c (login_tty): The Linux kernel can return EBUSY
+	for dup2 in case another thread races with the current one.  Retry
+	in this case.
+
 	* misc/error.h: Remove support for use outside of libc.  We have to
 	include <features.h> now.  Include <bits/error.h> if possible.
 	* misc/bits/error.h: New file.
